# apple-notes-pdf-mcp

./: CLAUDE.md  LICENSE  README.md  USAGE.md  pyproject.toml
docs/: index.html
docs/plans/: 2026-03-16-apple-notes-pdf-mcp.md
src/apple_notes_pdf_mcp/: applescript.py  image_extract.py  notestore.py  pdf_extract.py  server.py
tests/: conftest.py  test_applescript.py  test_image_extract.py  test_notestore.py  test_pdf_extract.py
