[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apple-notes-pdf-mcp"
version = "0.1.0"
description = "MCP server for Apple Notes with PDF attachment content extraction"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pdfplumber>=0.11.0",
]

[project.scripts]
apple-notes-pdf-mcp = "apple_notes_pdf_mcp.server:main"
